[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/UI/clipboard.svg" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/home.svg" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/skills.svg" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/auction.svg" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/group.svg" type="Texture" id=5]
[ext_resource path="res://Scripts/Menu_commun.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[node name="Menu_Commun" type="Control"]
anchor_right = 1.0
margin_bottom = 72.0
mouse_filter = 1
theme = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Listes" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 112.0
margin_bottom = 72.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Liste_Btn" type="TextureButton" parent="HBoxContainer/Listes"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 46 )
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Label2" type="Label" parent="HBoxContainer/Listes"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
text = "Mes Listes"
align = 1
valign = 1

[node name="Profils" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 116.0
margin_right = 228.0
margin_bottom = 72.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profil_Btn" type="TextureButton" parent="HBoxContainer/Profils"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 46 )
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label3" type="Label" parent="HBoxContainer/Profils"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
text = "Profils"
align = 1
valign = 1

[node name="Accueil" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 232.0
margin_right = 344.0
margin_bottom = 72.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accueil_Btn" type="TextureButton" parent="HBoxContainer/Accueil"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 46 )
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Accueil"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
text = "Accueil"
align = 1
valign = 1

[node name="Comp et Form" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 348.0
margin_right = 460.0
margin_bottom = 72.0
size_flags_horizontal = 3
alignment = 1

[node name="CaF_Btn" type="TextureButton" parent="HBoxContainer/Comp et Form"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 46 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label5" type="Label" parent="HBoxContainer/Comp et Form"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
text = "Comp. & Form."
align = 1
valign = 1

[node name="Regles" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 464.0
margin_right = 576.0
margin_bottom = 72.0
size_flags_horizontal = 3
alignment = 1

[node name="Regle_Btn" type="TextureButton" parent="HBoxContainer/Regles"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 46 )
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label4" type="Label" parent="HBoxContainer/Regles"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
text = "Règles & Scéna."
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
margin_bottom = 72.0
mouse_filter = 2
color = Color( 0.254902, 0.278431, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/Listes/Liste_Btn" to="." method="_on_Liste_Btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Profils/Profil_Btn" to="." method="_on_Profil_Btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Accueil/Accueil_Btn" to="." method="_on_Accueil_Btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Comp et Form/CaF_Btn" to="." method="_on_CaF_Btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Regles/Regle_Btn" to="." method="_on_Regle_Btn_pressed"]
